add dropDB command

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "session": "LOG_LV=verbose REDIS_URL=redis://127.0.0.1:9479/1 PORT=9400 node app.js --dev",
     "session-prod": "LOG_LV=verbose REDIS_URL=redis://127.0.0.1:9479/1 PORT=9400 node app.js --prod",
+    "dropDB": "LOG_LV=verbose REDIS_URL=redis://127.0.0.1:9479/1 PORT=9400 we dropDB",
     "watch": "supervisor -w server,config,plugin.js app.js",
     "build": "LOG_LV=verbose REDIS_URL=redis://127.0.0.1:9479/1 PORT=9409 gulp build",
     "deploy": "git push prod master && git push prod master:prod",
