--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-session": "^1.15.6",
     "fb": "^2.0.0",
     "gm": "^1.23.1",
+    "googleapis": "^29.0.0",
     "lodash": "^4.17.5",
     "mysql2": "^1.5.3",
     "redis": "^2.8.0",
