--- a/config/configuration.json
+++ b/config/configuration.json
@@ -33,7 +33,7 @@
         "use_follow",
         "find_d-form",
         "use_flag",
-        "find_municipio",
+        "find_history",
         "view_dashboard",
         "find_url-alia",
         "find_simple-event"
@@ -59,7 +59,7 @@
         "find_d-form",
         "find_news",
         "create_contact_message",
-        "find_municipio",
+        "find_history",
         "view_dashboard",
         "find_url-alia",
         "find_simple-event"
@@ -74,7 +74,7 @@
         "delete_comment",
         "delete_post",
         "update_user",
-        "update_municipio"
+        "update_history"
       ],
       "isSystemRole": true
     },
