--- a/package.json
+++ b/package.json
@@ -47,13 +47,16 @@
     "we-plugin-flag": "^2.0.0",
     "we-plugin-form": "^1.3.1",
     "we-plugin-google-analytics": "^1.2.0",
+    "we-plugin-gov-br": "^1.0.0",
     "we-plugin-group": "^2.0.0",
     "we-plugin-i18n-api": "^1.0.0",
+    "we-plugin-location": "^1.0.0",
     "we-plugin-mailchimp-sb": "^1.0.0",
     "we-plugin-menu": "^2.0.2",
     "we-plugin-news": "^2.0.2",
     "we-plugin-notification": "^2.0.1",
     "we-plugin-passport-facebook": "^1.3.0",
+    "we-plugin-passport-google": "^1.1.0",
     "we-plugin-search": "^2.0.1",
     "we-plugin-simple-event": "^2",
     "we-plugin-site-contact": "^2.0.2",
@@ -110,7 +113,9 @@
       "we-plugin-slideshow": true,
       "we-plugin-news": true,
       "we-plugin-simple-event": true,
-      "we-plugin-mailchimp-sb": true
+      "we-plugin-mailchimp-sb": true,
+      "we-plugin-gov-br": true,
+      "we-plugin-location": true
     },
     "devPlugins": {}
   }
