--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "we-plugin-contact": "^2.0.0",
     "we-plugin-csv": "^1.1.0",
     "we-plugin-db-system-settings": "^1.3.2",
-    "we-plugin-editor-tinymce": "^1.2.2",
+    "we-plugin-editor-tinymce": "^1.2.3",
     "we-plugin-email": "^1.3.2",
     "we-plugin-field-phone": "^1.1.0",
     "we-plugin-file": "^2.0.1",
@@ -115,7 +115,8 @@
       "we-plugin-simple-event": true,
       "we-plugin-mailchimp-sb": true,
       "we-plugin-gov-br": true,
-      "we-plugin-location": true
+      "we-plugin-location": true,
+      "we-plugin-google-api": true
     },
     "devPlugins": {}
   }
