--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "fb": "^2.0.0",
     "gm": "^1.23.1",
     "googleapis": "^29.0.0",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.10",
     "mysql2": "^1.5.3",
     "redis": "^2.8.0",
     "request": "^2.85.0",
@@ -39,18 +39,20 @@
     "we-plugin-contact": "^2.0.0",
     "we-plugin-csv": "^1.1.0",
     "we-plugin-db-system-settings": "^1.3.2",
-    "we-plugin-editor-tinymce": "^1.2.3",
+    "we-plugin-editor-tinymce": "^1.2.4",
     "we-plugin-email": "^1.3.2",
     "we-plugin-field-phone": "^1.1.0",
-    "we-plugin-file": "^2.0.1",
+    "we-plugin-file": "^2.0.2",
+    "we-plugin-file-gdrive": "^1.0.1",
     "we-plugin-file-local": "^2.0.2",
     "we-plugin-flag": "^2.0.0",
-    "we-plugin-form": "^1.3.1",
+    "we-plugin-form": "^1.3.2",
     "we-plugin-google-analytics": "^1.2.0",
+    "we-plugin-google-api": "^1.0.0",
     "we-plugin-gov-br": "^1.0.0",
     "we-plugin-group": "^2.0.0",
     "we-plugin-i18n-api": "^1.0.0",
-    "we-plugin-location": "^1.0.0",
+    "we-plugin-location": "^1.1.0",
     "we-plugin-mailchimp-sb": "^1.0.0",
     "we-plugin-menu": "^2.0.2",
     "we-plugin-news": "^2.0.2",
@@ -65,7 +67,7 @@
     "we-plugin-user": "^2.0.1",
     "we-plugin-user-settings": "^2.0.0",
     "we-plugin-view": "^1.4.5",
-    "we-plugin-vocabulary": "^2.0.0",
+    "we-plugin-vocabulary": "^2.0.1",
     "we-plugin-widget": "^2.0.0",
     "winston": "2.4.2"
   },
@@ -116,7 +118,8 @@
       "we-plugin-mailchimp-sb": true,
       "we-plugin-gov-br": true,
       "we-plugin-location": true,
-      "we-plugin-google-api": true
+      "we-plugin-google-api": true,
+      "we-plugin-file-gdrive": true
     },
     "devPlugins": {}
   }
