--- a/package.json
+++ b/package.json
@@ -35,11 +35,12 @@
     "we-passport-oauth2-password": "^2.0.0",
     "we-plugin-acl": "^1.2.12",
     "we-plugin-auth": "^2.2.0",
+    "we-plugin-certification": "^1.0.1",
     "we-plugin-comment": "^2.0.0",
     "we-plugin-contact": "^2.0.0",
     "we-plugin-csv": "^1.1.0",
     "we-plugin-db-system-settings": "^1.3.2",
-    "we-plugin-editor-tinymce": "^1.2.4",
+    "we-plugin-editor-tinymce": "^1.2.5",
     "we-plugin-email": "^1.3.2",
     "we-plugin-field-phone": "^1.1.0",
     "we-plugin-file": "^2.0.2",
@@ -120,7 +121,8 @@
       "we-plugin-gov-br": true,
       "we-plugin-location": true,
       "we-plugin-google-api": true,
-      "we-plugin-file-gdrive": true
+      "we-plugin-file-gdrive": true,
+      "we-plugin-certification": true
     },
     "devPlugins": {}
   }
