update npm modules to fix session errors

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "we-core": "^2.0.7",
     "we-passport-oauth2-password": "^2.0.0",
     "we-plugin-acl": "^1.2.13",
-    "we-plugin-auth": "^2.2.1",
+    "we-plugin-auth": "^2.2.2",
     "we-plugin-certification": "^1.0.3",
     "we-plugin-comment": "^2.0.0",
     "we-plugin-contact": "^2.0.0",
@@ -72,8 +72,7 @@
     "we-plugin-user-settings": "^2.0.3",
     "we-plugin-view": "^1.4.6",
     "we-plugin-vocabulary": "^2.0.4",
-    "we-plugin-widget": "^2.0.0",
-    "winston": "2.4.4"
+    "we-plugin-widget": "^2.0.0"
   },
   "devDependencies": {
     "gulp": "^3.9.1",
