--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "fb": "^2.0.0",
     "gm": "^1.23.1",
     "googleapis": "^34.0.0",
+    "js-video-url-parser": "^0.2.7",
     "lodash": "^4.17.11",
     "mysql2": "^1.6.1",
     "redis": "^2.8.0",
